Bulma colors fixed, Bulma Button ellipsize overflowing text

--- a/src/main/resources/custom.scss
+++ b/src/main/resources/custom.scss
@@ -2,6 +2,7 @@
 
 $mainErgo: #ff3b30;
 $primary: $mainErgo;
-$link: $mainErgo;
+$tabs-link-active-border-bottom-color: $mainErgo;
+$tabs-link-active-color: $mainErgo;
 
 @import "bulma/bulma.sass"
